# kiss

./: .cproject  .project  CMakeLists.txt  Readme.txt
include/kiss/: io.h  uuid.h
test/: test_uuid.cpp
